# uav-gcs

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/comm/: GcsHeartbeat.cpp  GcsHeartbeat.h  UdpTransport.cpp  UdpTransport.h
src/command/: CommandDefinition.h  CommandManager.cpp  CommandManager.h  CommandRules.h  CommandTable.cpp  MavlinkCommandSender.cpp  MavlinkCommandSender.h  VehicleCommand.h
src/core/: StateManager.cpp  StateManager.h  SystemState.h
src/telemetry/: TelemetryData.h  TelemetryParser.cpp  TelemetryParser.h
